fix small layout issue in ToDoBar

--- a/reactjs/src/components/ToDoBar.css
+++ b/reactjs/src/components/ToDoBar.css
@@ -7,7 +7,7 @@
  }
 
  .x3 {
-  @apply rounded-md
+  @apply rounded-md sm:rounded-none
  }
 
  .filter {
